--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation 'com.google.firebase:firebase-database-ktx'
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
